// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en-US splits the multi-words in a sentence correctly 1`] = `
Array [
  "this sentence has",
  " ",
  "french fries",
  ".",
  "",
]
`;

exports[`en-US splits the multi-words in a sentence correctly 2`] = `
Array [
  "this sentence has",
  " ",
  "french;fries",
  ".",
  "",
]
`;

exports[`en-US splits the multi-words in a sentence correctly 3`] = `
Array [
  "this sentence has",
  " ",
  "french!fries",
  ".",
  "",
]
`;

exports[`en-US splits the multi-words in a sentence correctly 4`] = `
Array [
  "this sentence has",
  " ",
  "french.fries",
  ".",
  "",
]
`;

exports[`en-US splits the multi-words in a sentence correctly 5`] = `
Array [
  "this sentence has",
  " ",
  "french?fries",
  ".",
  "",
]
`;

exports[`en-US splits the multi-words in a sentence correctly 6`] = `
Array [
  "this sentence has",
  " ",
  "french¿fries",
  ".",
  "",
]
`;

exports[`en-US splits the multi-words in a sentence correctly 7`] = `
Array [
  "this sentence has",
  " ",
  "french:fries",
  ".",
  "",
]
`;

exports[`en-US splits the words in a sentence correctly 1`] = `
Array [
  "this sentence is",
  " ",
  "bad",
  ".",
  "",
]
`;

exports[`en-US splits the words in a sentence correctly 2`] = `
Array [
  "this sentence is",
  " ",
  "worse",
  ".",
  "",
]
`;

exports[`en-US splits the words with unicode in a sentence correctly 1`] = `
Array [
  "this sentence has one",
  " ",
  "jalapeño",
  ".",
  "",
]
`;

exports[`en-US splits the words with unicode in a sentence correctly 2`] = `
Array [
  "this sentence has many jalapeños.",
]
`;

exports[`en-US splits words when there are repeat words 1`] = `
Array [
  "This is",
  " ",
  "bad",
  " ",
  "bad, very BAD.",
]
`;

exports[`pt-BR splits the words with unicode in a sentence correctly 1`] = `
Array [
  "biólogo se soletra com",
  ": ",
  "bi",
  " ",
  "",
]
`;

exports[`pt-BR splits the words with unicode in a sentence correctly 2`] = `
Array [
  "",
  "",
  "m.e.r.d.a",
  "",
  "",
]
`;

exports[`pt-BR splits the words with unicode in a sentence correctly 3`] = `
Array [
  "não tomo",
  " ",
  "café",
  " ",
  "pois faz mal",
]
`;

exports[`pt-BR splits the words with unicode in a sentence correctly 4`] = `
Array [
  "",
  "",
  "Como fazer coisas ruins",
  "",
  "",
]
`;

exports[`pt-BR splits the words with unicode in a sentence correctly 5`] = `
Array [
  "O biólogo recomenda este artigo",
]
`;

exports[`pt-BR splits the words with unicode in a sentence correctly 6`] = `
Array [
  "cafe",
]
`;

exports[`pt-BR splits the words with unicode in a sentence correctly 7`] = `
Array [
  "Ser banido é uma merda",
]
`;
